--- a/Jagan/Style/Index.css
+++ b/Jagan/Style/Index.css
@@ -1,29 +1,10 @@
-﻿* {
-    -webkit-transition-property: all;
-    -webkit-transition-duration: .2s;
-    -moz-transition-timing-function: cubic-bezier(100,50,21,6);
-    -moz-transition-property: all;
-    -moz-transition-timing-function: cubic-bezier(100,50,21,6);
+﻿.cadastro{
+    backgroud-color: blue;
+    max-width: 500px;
+    width: 70%;
+    padding: 20px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 50%);
 }
-
-.style-1 {
-    text-align: center;
-}
-
-.btn {
-    color: white;
-    background: #56baed;
-    padding: 10px 20px;
-    text-decoration: none;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
-
-    .btn:hover {
-        border: none;
-        background: rgba(0, 0, 0, 0.4);
-        background: #fff;
-        padding: 20px 20px;
-        #000;
-        color: #1b1b1b;
-    }
