--- a/Jagan/Style/cadastro.css
+++ b/Jagan/Style/cadastro.css
@@ -12,7 +12,7 @@
 .campo {
     width: 100%;
     height: 45px;
-    border: 1px solid #ccc;
+    border: 1px none #ccc;
     padding-left: 10px;
     margin: 5px 0;
 }
