Adição de tela de cadastro de produtos e andamento com a conexão do banco nas demais telas

--- a/Jagan/Painel/clientes.cshtml
+++ b/Jagan/Painel/clientes.cshtml
@@ -17,8 +17,6 @@
 
     da.Fill(dbtl);
 
-    string excluir;
-
 }
 
 <!DOCTYPE html>
@@ -46,7 +44,7 @@
                         <a class="nav-link active" aria-current="page" href="/Painel/default.aspx">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/Painel/produtos.cshtml">Produtos</a>
+                        <a class="nav-link active" aria-current="page" href="/Painel/produtos.aspx">Produtos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/Painel/clientes.cshtml">Clientes</a>
