--- a/Jagan/Painel/produtos.cshtml
+++ b/Jagan/Painel/produtos.cshtml
@@ -276,7 +276,7 @@
                         <a href="#" class="text-decoration-none text-dark">Politica de Privacidade</a>
                     </div>
                     <div class="col-12 col-md-4 text-center text-md-right">
-                        <a href="#" class="text-decoration-none text-dark">Administrar</a>
+                        <a href="../Painel/addProduto.aspx" class="text-decoration-none text-dark">Adicionar Produto</a>
                     </div>
                 </div>
             </div>
